/*
 * $Id: ChangeLog,v 1.2212 2004/02/03 14:01:12 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-02-03 21:00 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/gtwvt/gtwvt.c
    + Wvt_ChooseColor( nRGBInit, aRGB16, nFlags )
    + Wvt_ChooseFont( cFontName, nHeight, nWidth, nWeight, nQuality, lItalic, lUnderline, lStrikeOut )
    + Wvt_SetMousePos( nRow, nCol )
      Forces the mouse pointer to rest at the nRow, nCol, in the mid of top and bottom of nRow.

  * xharbour/include/hbgtwvt.h
    + #include <commdlg.h>

  * xhatbour/tests/wvtgui.prg
    * Updated to demonstrate above functions.  

2004-02-03 15:00 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
   * small debug info added

  * xharbour/source/rtl/gtnul/gtnul.c
   + hb_gt_info() added to GTNUL. Now there is no necessary to implement
     gt_info in each GT

  * xharbour/source/rtl/Makefile
   * TAB to SPACE conversion

  * xharbour/source/rtl/gtalleg/gtalleg.c
   ! fixes for non C99 compilers (eg. GCC 2.9x in default mode)

  * xharbour/source/rtl/gtcrs/chrmap.c
   * s_szDefaultCharMapFile changed to global

  * xharbour/config/linux/gcc.cf
  * xharbour/config/linux/global.cf
   * small changes for GTALLEG

2004-02-03 18:30 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/tbrowse.prg
    - Removed Method _ForceStable() and merged the code.
    * Optinimized ::DispCell() to display respecting oColumn:width.
    * ::HitTest() now returns correct column and row position as per Clipper 5.3b.

2004-02-03 13:33 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/gtxvt/gtxvt.c
    ! gtxvt now grabs (passively) the keyboard.
      This means that it takes precedence over Window Manager